# fswlib

./: LICENSE  MANIFEST.in  README.md  README_PyPI.md  To do.txt  clear.sh  mkdocs.yml  pyproject.toml  requirements.txt
dev/: README_PyPI.md  To do.txt  clean.sh  compatibility_tests.txt  gendocs  install_from_TestPyPI.sh  upload.sh
dev/archive/: old_documentation.txt
dev/docs/default_templates_misc/: mermaid.html.jinja2
dev/docs/templates/: class.html.jinja2  frame.html.jinja2  module.html.jinja2
docs/: fswlib.html  index.html  index.md  search.js
docs/api/: FSWEmbedding.md
docs/fswlib/fsw_embedding/: fsw_embedding.html
docs/site/: 404.html  objects.inv
docs/templates/: class.html.jinja2
examples/fsw_embedding/: example_minimal.py  example_not_so_minimal.py  example_total_mass.py  setup_fsw_import.py
site/: index.html  objects.inv
site/api/FSWEmbedding/: index.html
site/search/: search_index.json
site/site/search/: search_index.json
src/fsw/: __init__.py  build.py
src/fsw/fsw_embedding/: build_fsw_embedding  build_fsw_embedding.py  fsw_embedding.py
src/fswlib/: __init__.py  build.py  test.py  versions.py
src/fswlib/fsw_embedding/: build_fsw_embedding  build_fsw_embedding.py  fsw_embedding.cu  fsw_embedding.py  test_fsw_embedding.py
tests/fsw_embedding/: temp_test.py  test_conv.py  test_embedding_simple.py  test_graph.py  test_old.py
