[project]
name = "fswlib"
version = "0.1.7"
description = "Fourier Sliced-Wasserstein (FSW) embedding — a PyTorch-based library"
readme = "README.md"
requires-python = ">=3.10"

license = { file = "LICENSE" }

authors = [
  { name = "Tal Amir", email = "talamir@technion.ac.il" },
  { name = "Nadav Dym", email = "nadavdym@technion.ac.il" }
]

maintainers = [
  { name = "Tal Amir", email = "talamir@technion.ac.il" }
]

keywords = [
  "sliced Wasserstein",
  "Fourier Sliced Wasserstein",
  "FSW embedding",
  "multiset embedding"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy >= 1.24.4",
  "torch >= 2.0.0"
]

[project.urls]
Homepage = "https://github.com/tal-amir/fswlib"
Repository = "https://github.com/tal-amir/fswlib"
Documentation = "https://github.com/tal-amir/fswlib"

[project.scripts]
fswlib-build = "fswlib.build:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]