[build-system]
requires = ["setuptools>=61.0"]

[project]
name = "fswlib"
version = "0.9.7"
description = "A PyTorch library for computing the Fourier Sliced-Wasserstein (FSW) embedding"
requires-python = ">=3.10.3"
readme = "dev/README_PyPI.md"

dependencies = [
  "numpy >= 1.24.4",
  "torch >= 2.1.0"
]

license = { file = "LICENSE" }

authors = [
  { name = "Tal Amir", email = "talamir@technion.ac.il" },
  { name = "Nadav Dym", email = "nadavdym@technion.ac.il" }
]

maintainers = [
  { name = "Tal Amir", email = "talamir@technion.ac.il" }
]

keywords = [
  "sliced Wasserstein",
  "Fourier Sliced Wasserstein",
  "FSW embedding",
  "multiset embedding"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/tal-amir/fswlib"
Repository = "https://github.com/tal-amir/fswlib"
Documentation = "https://tal-amir.github.io/fswlib"

[project.scripts]
fswlib-build = "fswlib.build:main"
fswlib-test = "fswlib.test:main"
fswlib-versions = "fswlib.versions:main"
fswlib-clean = "fswlib.build:clean_entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]